kubernetes/apps/home/bentopdf/app/httproute-oauth2.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf-oauth2
  namespace: home
spec:
  hostnames:
    - "pdf.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          namespace: network
          port: 4180
