kubernetes/apps/home/bentopdf/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${APP}-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ${APP}
  oidc:
    provider:
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: ${APP}-oidc-provider
          port: 1411
      issuer: "https://id.${SECRET_DOMAIN}"
      authorizationEndpoint: "https://id.${SECRET_DOMAIN}/authorize"
      tokenEndpoint: "https://id.${SECRET_DOMAIN}/api/oidc/token"
    clientIDRef:
      name: "${APP}-oidc"
    clientSecret:
      name: "${APP}-oidc"
    redirectURL: "https://pdf.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "${LOGOUT_PATH:-/logout}"
    scopes: ["openid", "profile", "email"]
